src/objects/MDM_Product__c.object
<CustomObject>
    <description>MDM_Product</description>
    <fields>
        <fullName>Brand__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Brand</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>MDM_Brand__c.Manufacturer__c</field>
                <operation>equals</operation>
                <valueField>$Source.Manufacturer__c</valueField>
            </filterItems>
            <filterItems>
                <field>MDM_Brand__c.EnterpriseID__c</field>
                <operation>startsWith</operation>
                <value>BD</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>MDM_Brand__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BulkUploadID__c</fullName>
        <label>BulkUploadID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Pack__c</fullName>
        <description>Case Pack</description>
        <inlineHelpText>Case Pack</inlineHelpText>
        <label>Case Pack</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_UPC__c</fullName>
        <label>Case UPC</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryFamilyName__c</fullName>
        <formula>Category__r.CategoryFamilyName__c</formula>
        <label>CategoryFamilyName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>MDM_ProductCategory__c.EnterpriseID__c</field>
                <operation>startsWith</operation>
                <value>PC</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>MDM_ProductCategory__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_of_Goods_Sold__c</fullName>
        <label>Cost of Goods Sold</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CustomizedLastModifiedDatetime__c</fullName>
        <defaultValue>$System.OriginDateTime</defaultValue>
        <description>CustomizedLastModifiedDatetime</description>
        <inlineHelpText>CustomizedLastModifiedDatetime</inlineHelpText>
        <label>CustomizedLastModifiedDatetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CustomizedLastModifiedUserName__c</fullName>
        <description>CustomizedLastModifiedUserName</description>
        <inlineHelpText>Who Last updated the Product / Added or updated a Reference to this product.</inlineHelpText>
        <label>CustomizedLastModifiedUserName</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Override_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data Override Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_Unit_Delivered_Cost__c</fullName>
        <label>Default Unit Delivered Cost</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Default_Unit_Price__c</fullName>
        <description>Default Unit Price</description>
        <inlineHelpText>Default Unit Price</inlineHelpText>
        <label>Default Unit Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Product Description</description>
        <inlineHelpText>Product Description</inlineHelpText>
        <label>Description</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dimension_Unit_of_Measure__c</fullName>
        <label>Dimension Unit of Measure</label>
        <picklist>
            <picklistValues>
                <fullName>inches</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>mm</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DomainSpecificIDType__c</fullName>
        <label>Other Identifier Type</label>
        <picklist>
            <picklistValues>
                <fullName>ISBN-International Standard Book Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASIN-Amazon Standard Identification Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISSN-International Standard Serial Number (Magazine subscriptions)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NDC-National Drug Code (US)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISMN- International Standard Music Number</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DomainSpecificID__c</fullName>
        <description>Other Identifier</description>
        <inlineHelpText>Other Identifier</inlineHelpText>
        <label>Other Identifier</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EAN13__c</fullName>
        <description>GTIN-13 numbers (in EAN-13 barcodes)</description>
        <inlineHelpText>GTIN-13 numbers (in EAN-13 barcodes)</inlineHelpText>
        <label>EAN-13</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EAN14__c</fullName>
        <description>EAN14</description>
        <inlineHelpText>GTIN-14 (EAN/UCC-14 or ITF-14): this is a 14-digit number used to identify trade items at various packaging levels</inlineHelpText>
        <label>EAN-14</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EAN8__c</fullName>
        <description>GTIN-8 numbers (EAN-8 barcodes)</description>
        <inlineHelpText>An eight-digit UPC. The UPC-E could be stored here
GTIN-8 numbers</inlineHelpText>
        <label>EAN-8</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Availability_Date__c</fullName>
        <description>End Availability Date</description>
        <inlineHelpText>End Availability Date</inlineHelpText>
        <label>End Availability Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EnterpriseID__c</fullName>
        <description>EnterpriseID</description>
        <externalId>true</externalId>
        <label>EnterpriseID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EstablishSourceLinkOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EstablishSourceLinkOnly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GTIN__c</fullName>
        <description>Global Trade Item Number</description>
        <inlineHelpText>The GTIN (Global Trade Item Number) is the foundation for the EAN.</inlineHelpText>
        <label>GTIN Number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdFromSource__c</fullName>
        <externalId>true</externalId>
        <label>IdFromSource</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IgnoreWarnings__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IgnoreWarnings</description>
        <inlineHelpText>At least one of the Domain/Usage should be checked
If the Planning Product check box is selected, Enter a Cost of Good sold value.
We should warn if the same Manufacturer Product identifier is used</inlineHelpText>
        <label>IgnoreWarnings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InnerPack__c</fullName>
        <label>Inner Pack</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsBoomiMDMUpsert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsBoomiMDMUpsert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Consumer_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consumer Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Invoicable_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoicable Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Orderable_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Orderable Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Planning_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Planning Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Shipping_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shipping Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ManufacturerCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ManufacturerProductCategory</description>
        <inlineHelpText>ManufacturerProductCategory</inlineHelpText>
        <label>ManufacturerCategory</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>MDM_ManufacturerProductCategory__c.Manufacturer__c</field>
                <operation>equals</operation>
                <valueField>$Source.Manufacturer__c</valueField>
            </filterItems>
            <filterItems>
                <field>MDM_ManufacturerProductCategory__c.EnterpriseID__c</field>
                <operation>startsWith</operation>
                <value>MC</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>MDM_ManufacturerProductCategory__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ManufacturerDescription__c</fullName>
        <label>ManufacturerDescription</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ManufacturerID__c</fullName>
        <description>International Standard Book Number</description>
        <inlineHelpText>International Standard Book Number</inlineHelpText>
        <label>Manufacturer Identifier</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Manufacturer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>MDM_Manufacturer__c.EnterpriseID__c</field>
                <operation>startsWith</operation>
                <value>MG-</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>MDM_Manufacturer__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Package_Depth__c</fullName>
        <label>Package Depth</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Package_Height__c</fullName>
        <description>Package Height</description>
        <inlineHelpText>Package Height</inlineHelpText>
        <label>Package Height</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Package_Unit__c</fullName>
        <label>Package Unit</label>
        <picklist>
            <picklistValues>
                <fullName>EA-Each</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PK-Pack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS-Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS-Display Shipper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PL-Pallet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MX-Mixed Module</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TL-Transport Load</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Package_Weight__c</fullName>
        <label>Package Weight</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Package_Width__c</fullName>
        <label>Package Width</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Country</label>
        <referenceTo>MDM_Product_Country__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Group</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>MDM_Product_Group__c.Manufacturer__c</field>
                <operation>equals</operation>
                <valueField>$Source.Manufacturer__c</valueField>
            </filterItems>
            <filterItems>
                <field>MDM_Product_Group__c.EnterpriseID__c</field>
                <operation>startsWith</operation>
                <value>PG</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>MDM_Product_Group__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Status__c</fullName>
        <label>Product Status</label>
        <picklist>
            <picklistValues>
                <fullName>Future</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discontinued</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deleted</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <label>Short Description</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Size_Unit_of_Measure__c</fullName>
        <label>Size Unit of Measure</label>
        <picklist>
            <picklistValues>
                <fullName>PK-Pack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT-Pints</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EA-Each</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QT-Quarts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SF-Square Feet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RL-Rolls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA-Not Applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LB-Pounds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YD-Yards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT-Count</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OZ-Ounces</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ML-Milliliters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA-Gallons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MG-Milligrams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FT-Feet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BG-Bags</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BX-Boxes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN-Inches</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KT-Kit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DP-Display Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JR-Jars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>g-Grams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kg-Kilograms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L-Liters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SH-Sheets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PC-Pieces</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ST-Sticks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PD-Pads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CM-Centimeters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MM-Millimeters</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <description>Size</description>
        <inlineHelpText>Size</inlineHelpText>
        <label>Size</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceSystem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SourceSystem</label>
        <referenceTo>MDM_Source__c</referenceTo>
        <relationshipLabel>MDM_Products</relationshipLabel>
        <relationshipName>MDM_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Availability_Date__c</fullName>
        <description>Start Availability Date</description>
        <inlineHelpText>Start Availability Date</inlineHelpText>
        <label>Start Availability Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UPC12__c</fullName>
        <description>Universal Product Code</description>
        <inlineHelpText>Universal Product Code
This is the 12 digit UPC-A. Note, one of the five identifying numbers must be specified</inlineHelpText>
        <label>UPC-12</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValidateUpsert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ValidateUpsert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ValidationStatus__c</fullName>
        <description>Validation Status</description>
        <inlineHelpText>Validation Status</inlineHelpText>
        <label>Validation Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Variant__c</fullName>
        <label>Variant</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WasMastered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WasMastered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Weight_Unit_of_Measure__c</fullName>
        <label>Weight Unit of Measure</label>
        <picklist>
            <picklistValues>
                <fullName>lbs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>kilograms</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>MDM_Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Product_Group__c</columns>
        <columns>UPC12__c</columns>
        <columns>EAN8__c</columns>
        <columns>EAN13__c</columns>
        <columns>Manufacturer__c</columns>
        <columns>ManufacturerID__c</columns>
        <columns>Brand__c</columns>
        <columns>Case_Pack__c</columns>
        <columns>Case_UPC__c</columns>
        <columns>Dimension_Unit_of_Measure__c</columns>
        <columns>BulkUploadID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Brand__c</field>
            <operation>equals</operation>
            <value>B*</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MDM_Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ConsumerProduct_EnterCaseUPC_CassPack</fullName>
        <active>true</active>
        <description>If Consumer Product is selected and any of the remaining, the user should probably provide a case UPC and a</description>
        <errorConditionFormula>OR
(AND(Is_Consumer_Product__c == true,
ISNULL(Case_Pack__c),IgnoreWarnings__c == false),
AND(Is_Consumer_Product__c == true, ISBLANK(Case_UPC__c),   IgnoreWarnings__c== false ))</errorConditionFormula>
        <errorMessage>Warning: Consumer Product is selected Provide a case UPC and a CasePack.
To Ignore the warning and proceed, Accept Ignore Warnings.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HeightWidthDepth_DimensionUnitofMeasure</fullName>
        <active>true</active>
        <errorConditionFormula>And(
OR( Package_Depth__c &lt;&gt; 0, Package_Height__c &lt;&gt; 0, Package_Width__c &lt;&gt; 0),  
( ISPICKVAL(Dimension_Unit_of_Measure__c,&quot;&quot;)))</errorConditionFormula>
        <errorMessage>If a height, width, or depth dimension are entered, there must be a dimension unit of measure selected</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IdentifiersValidation</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
AND(NOT(ISBLANK(EAN8__c)),
    LEN(EAN8__c) &lt; 8),
AND(NOT(ISBLANK(UPC12__c)),
    LEN(UPC12__c) &lt; 12),
And (NOT(ISBLANK(EAN13__c)),
    LEN(EAN13__c) &lt; 13),
AND (NOT(ISBLANK(EAN14__c)),
    LEN(EAN14__c) &lt; 14)
)</errorConditionFormula>
        <errorMessage>Invalid Identifier in EAN8/UPC12/EAN13/EAN14</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OneoftheDomainUsagecheckboxesChecked</fullName>
        <active>true</active>
        <description>At least one of the Domain/Usage check boxes should be checked</description>
        <errorConditionFormula>AND(
AND( Is_Consumer_Product__c == false, Is_Planning_Product__c == false, Is_Orderable_Product__c == false, Is_Shipping_Product__c == false, Is_Invoicable_Product__c == false),
(IgnoreWarnings__c = false))</errorConditionFormula>
        <errorMessage>Warning: At least one of the Domain/Usage checkboxes should be checked.
To Ignore the warning and proceed, Accept Ignore Warnings.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PlanningProductSelected_EnterCostofGood</fullName>
        <active>true</active>
        <description>At least one of the Domain/Usage check boxes should be checked</description>
        <errorConditionFormula>OR(
AND(Is_Planning_Product__c == true,
Cost_of_Goods_Sold__c == 0.0,IgnoreWarnings__c == false),
AND(Is_Planning_Product__c == true,
ISNULL(Cost_of_Goods_Sold__c),IgnoreWarnings__c == false)
)</errorConditionFormula>
        <errorMessage>Warning: Planning Product check box is selected, Enter a Cost of Good sold value.
To Ignore the warning and proceed, Accept Ignore Warnings.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rule1</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(OR(REGEX(EAN13__c , &quot;^[0-9]{10}&quot;)))</errorConditionFormula>
        <errorDisplayField>EAN13__c</errorDisplayField>
        <errorMessage>Invalid UPC</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Weight_WeightUnitofMeasure</fullName>
        <active>true</active>
        <errorConditionFormula>And(
OR( Package_Weight__c &lt;&gt; 0 ),  
( ISPICKVAL(Weight_Unit_of_Measure__c ,&quot;&quot;)))</errorConditionFormula>
        <errorMessage>If a weight value is entered, a weight unit of measure must be selected</errorMessage>
    </validationRules>
</CustomObject>